fixed div spacing

--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,7 @@ button {
   cursor: pointer;
   border-radius: 10px;
   padding: 5px;
-  margin: 10px 0 0 0;
+  margin: 5px 0 0 0;
 }
 
 button:hover {
@@ -34,7 +34,7 @@ button:hover {
 h1 {
   font-family: "Shadows Into Light", cursive;
   text-align: center;
-  font-size: 5rem;
+  font-size: 4rem;
   color: #fff;
   text-shadow: 0 0 7px #b39cd0, 0 0 10px #b39cd0, 0 0 21px #fff,
     0 0 42px #fbeaff, 0 0 82px #fbeaff, 0 0 92px #fbeaff, 0 0 102px #fbeaff,
@@ -60,7 +60,8 @@ h2 {
   font-size: xx-large;
   letter-spacing: 0.2rem;
   text-align: center;
-  margin-top: -40px;
+  margin-top: -35px;
+  font-size: 1.25rem;
 }
 
 .level {
@@ -77,7 +78,7 @@ h2 {
   flex-wrap: wrap;
   display: flex;
   justify-content: center;
-  margin: 80px auto;
+  margin: 50px auto;
   cursor: url("mallet.png") 10 100, pointer;
   padding: 0px 0px 60px 0px;
   border: 0.2rem solid #fff;
